<resources>
    <string name="app_name">iSync</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Doe</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_send_email">Send Email</string>
    <string name="menu_message_to_cash">Message to Cash</string>
    <string name="menu_link_to_website">Link to website</string>
    <string name="menu_setting">Setting</string>

</resources>